Separated the physics of the agent from the reward logic. Fixed the goal-collection reward.

--- a/training/testing.ipynb
+++ b/training/testing.ipynb
@@ -60,12 +60,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "env.engine_channel.set_configuration_parameters(time_scale=100, width=1000, height=1000, quality_level=0)#, target_frame_rate=600)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 500/500 [00:02<00:00, 179.54it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "env.reset()\n",
+    "for _ in trange(500):\n",
+    "    env.step({agent: np.array([np.random.randn(), np.random.randn()]) for agent in env.active_agents})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "env.reset()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
