--- a/training/testing.ipynb
+++ b/training/testing.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "env.engine_channel.set_configuration_parameters(time_scale=100, width=1000, height=1000, quality_level=0)#, target_frame_rate=600)\n"
@@ -101,11 +101,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "model = MLPModel({\n",
-    "    \"input_size\": 90,\n",
+    "    \"input_size\": 94,\n",
     "})\n",
     "\n",
     "# agent = Agent(model)\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "trainer_config = {\n",
@@ -213,7 +213,68 @@
    "execution_count": 16,
    "outputs": [],
    "source": [
-    "env.close()"
+    "env.close()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "data, metrics = trainer.collector.collect_data(500)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.        , 0.        , 0.        , 0.        ,\n       0.        , 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556,\n       0.05555556, 0.05555556, 0.05555556, 0.05555556, 0.05555556],\n      dtype=float32)"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "metrics['mean_finish']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False, False,\n        False, False, False, False, False, False, False, False, False,  True])"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['dones']['Person1?team=0&id=0']"
    ],
    "metadata": {
     "collapsed": false,
