Refactored the manager into two files; Fixed the scaling issue that might have caused the agents to go to weird places; Added the basic agent sensor outline

--- a/training/training.ipynb
+++ b/training/training.ipynb
@@ -88,9 +88,9 @@
    "execution_count": 12,
    "outputs": [],
    "source": [
-    "agent = Agent.load_agent('/Users/redtachyon/tb_logs/new_metrics_2020-11-24_13-27-36/',\n",
-    "                         action_range=action_range,\n",
-    "                         weight_idx=1)\n"
+    "# agent = Agent.load_agent('/Users/redtachyon/tb_logs/new_metrics_2020-11-24_13-27-36/',\n",
+    "#                          action_range=action_range,\n",
+    "#                          weight_idx=1)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -107,8 +107,6 @@
     "model = MLPModel({\n",
     "    \"input_size\": 94,\n",
     "})\n",
-    "\n",
-    "# agent = Agent(model)\n",
     "\n",
     "agent = Agent(model, action_range=action_range)"
    ],
