--- a/training/test.ipynb
+++ b/training/test.ipynb
@@ -100,6 +100,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "obs = env.reset()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([1000000., 1000000., 1000000., 1000000., 1000000., 1000000.,\n       1000000., 1000000., 1000000., 1000000., 1000000., 1000000.,\n       1000000., 1000000., 1000000., 1000000., 1000000., 1000000.,\n       1000000., 1000000.], dtype=float32)"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obs['Person1?team=0&id=1'][:20]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "outputs": [],
    "source": [
