A bunch of extra fixes

--- a/training/notebooks/Untitled3.ipynb
+++ b/training/notebooks/Untitled3.ipynb
@@ -46,21 +46,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200/200 [00:04<00:00, 46.27it/s]\n"
+      "100%|██████████| 20/20 [00:00<00:00, 26.85it/s]\n"
      ]
     }
    ],
    "source": [
-    "for i in trange(200):\n",
+    "for i in trange(20):\n",
     "    obs_hist.append(obs)\n",
-    "    obs, reward, done, info = env.step({k: np.array([1, 1]) for k in obs})\n",
+    "    obs, reward, done, info = env.step({k: np.array([0, 0]) for k in obs})\n",
     "    rew_hist.append(reward)\n",
     "    if any(done.values()):\n",
     "        print(i)\n",
@@ -69,7 +69,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.stats_channel.msg_buffer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -77,64 +97,19 @@
       "text/plain": [
        "{'final_obs': {},\n",
        " 'final_rewards': {},\n",
-       " 'm_mean_dist': array([14.52417], dtype=float32),\n",
-       " 'm_mean_speed': array([0.0268649], dtype=float32),\n",
-       " 'm_mean_finish': array([0.], dtype=float32),\n",
-       " 'm_mean_collision': array([1.], dtype=float32)}"
+       " 'm_mean_dist': array([9.541105, 8.351412], dtype=float32),\n",
+       " 'm_mean_speed': array([3.527491e-09, 3.010902e-09], dtype=float32),\n",
+       " 'm_mean_finish': array([0., 0.], dtype=float32),\n",
+       " 'm_mean_collision': array([0. , 0.5], dtype=float32)}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Person1?team=0&id=0': array([-0.40225497, -0.4859166 ,  0.70708805,  0.70708805], dtype=float32),\n",
-       " 'Person1?team=0&id=2': array([-0.18849626,  0.01194979,  0.70708805,  0.70708805], dtype=float32),\n",
-       " 'Person1?team=0&id=3': array([-0.18312716, -0.43919078,  0.70708805,  0.70708805], dtype=float32),\n",
-       " 'Person1?team=0&id=4': array([-0.27651632, -0.01882367,  0.00157725,  0.70708805], dtype=float32),\n",
-       " 'Person1?team=0&id=5': array([-1.0890907e-01, -4.7753230e-01,  7.0708811e-01,  2.7630926e-04],\n",
-       "       dtype=float32),\n",
-       " 'Person1?team=0&id=6': array([-7.1512860e-01, -2.0222025e-01,  3.5145282e-04,  7.5038522e-01],\n",
-       "       dtype=float32),\n",
-       " 'Person1?team=0&id=7': array([-0.7614337 , -0.04553471,  0.7070881 ,  0.00156906], dtype=float32),\n",
-       " 'Person1?team=0&id=8': array([-0.4248654 ,  0.09712906,  0.70708805,  0.70708805], dtype=float32),\n",
-       " 'Person1?team=0&id=9': array([-0.83327675, -0.40836507,  0.70708805,  0.70708805], dtype=float32),\n",
-       " 'Person1?team=0&id=10': array([-4.9992245e-01, -7.7317917e-01,  3.1527877e-04,  2.1981001e-04],\n",
-       "       dtype=float32),\n",
-       " 'Person1?team=0&id=11': array([-4.4594008e-01, -2.4448457e-01,  2.7213097e-04,  7.0708805e-01],\n",
-       "       dtype=float32),\n",
-       " 'Person1?team=0&id=12': array([-0.26065564, -0.05369776,  0.70708805,  0.70708805], dtype=float32),\n",
-       " 'Person1?team=0&id=13': array([-0.3593671 , -0.5378212 ,  0.70708805,  0.70708805], dtype=float32),\n",
-       " 'Person1?team=0&id=14': array([-0.81530875,  0.17360942,  0.70708805,  0.70708805], dtype=float32),\n",
-       " 'Person1?team=0&id=15': array([-0.33917692, -0.49659854,  0.70708805,  0.70708805], dtype=float32),\n",
-       " 'Person1?team=0&id=16': array([-0.20510384, -0.15966149,  0.70708805,  0.70708805], dtype=float32),\n",
-       " 'Person1?team=0&id=17': array([ 0.12181614, -0.5049033 ,  0.70708805,  0.70708805], dtype=float32),\n",
-       " 'Person1?team=0&id=18': array([-2.4802971e-01,  8.5247055e-02,  2.7307868e-04,  7.0708805e-01],\n",
-       "       dtype=float32),\n",
-       " 'Person1?team=0&id=19': array([-0.6136103 ,  0.2086103 ,  0.70708805,  0.70708805], dtype=float32),\n",
-       " 'Person1?team=0&id=20': array([-4.3753663e-01, -4.0872788e-01,  2.7117730e-04,  6.6379076e-01],\n",
-       "       dtype=float32)}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "obs_hist[-1]"
    ]
   },
   {
