--- a/training/notebooks/unity_steps.ipynb
+++ b/training/notebooks/unity_steps.ipynb
@@ -38,6 +38,325 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(obs.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_obs, agent_ids = env.pack(obs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([80, 5, 4])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_obs.buffer.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for _ in range(1000):\n",
+    "    env.step({})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Person1?team=0&id=0',\n",
+       " 'Person1?team=0&id=2',\n",
+       " 'Person1?team=0&id=3',\n",
+       " 'Person1?team=0&id=4',\n",
+       " 'Person1?team=0&id=5',\n",
+       " 'Person1?team=0&id=6',\n",
+       " 'Person1?team=0&id=7',\n",
+       " 'Person1?team=0&id=8',\n",
+       " 'Person1?team=0&id=9',\n",
+       " 'Person1?team=0&id=10',\n",
+       " 'Person1?team=0&id=11',\n",
+       " 'Person1?team=0&id=12',\n",
+       " 'Person1?team=0&id=13',\n",
+       " 'Person1?team=0&id=14',\n",
+       " 'Person1?team=0&id=15',\n",
+       " 'Person1?team=0&id=16',\n",
+       " 'Person1?team=0&id=17',\n",
+       " 'Person1?team=0&id=18',\n",
+       " 'Person1?team=0&id=19',\n",
+       " 'Person1?team=0&id=20',\n",
+       " 'Person1?team=0&id=22',\n",
+       " 'Person1?team=0&id=23',\n",
+       " 'Person1?team=0&id=24',\n",
+       " 'Person1?team=0&id=25',\n",
+       " 'Person1?team=0&id=26',\n",
+       " 'Person1?team=0&id=27',\n",
+       " 'Person1?team=0&id=28',\n",
+       " 'Person1?team=0&id=29',\n",
+       " 'Person1?team=0&id=30',\n",
+       " 'Person1?team=0&id=31',\n",
+       " 'Person1?team=0&id=32',\n",
+       " 'Person1?team=0&id=33',\n",
+       " 'Person1?team=0&id=34',\n",
+       " 'Person1?team=0&id=35',\n",
+       " 'Person1?team=0&id=36',\n",
+       " 'Person1?team=0&id=37',\n",
+       " 'Person1?team=0&id=38',\n",
+       " 'Person1?team=0&id=39',\n",
+       " 'Person1?team=0&id=40',\n",
+       " 'Person1?team=0&id=41',\n",
+       " 'Person1?team=0&id=42',\n",
+       " 'Person1?team=0&id=43',\n",
+       " 'Person1?team=0&id=44',\n",
+       " 'Person1?team=0&id=45',\n",
+       " 'Person1?team=0&id=46',\n",
+       " 'Person1?team=0&id=47',\n",
+       " 'Person1?team=0&id=48',\n",
+       " 'Person1?team=0&id=49',\n",
+       " 'Person1?team=0&id=50',\n",
+       " 'Person1?team=0&id=51',\n",
+       " 'Person1?team=0&id=52',\n",
+       " 'Person1?team=0&id=53',\n",
+       " 'Person1?team=0&id=54',\n",
+       " 'Person1?team=0&id=55',\n",
+       " 'Person1?team=0&id=56',\n",
+       " 'Person1?team=0&id=57',\n",
+       " 'Person1?team=0&id=58',\n",
+       " 'Person1?team=0&id=59',\n",
+       " 'Person1?team=0&id=60',\n",
+       " 'Person1?team=0&id=62',\n",
+       " 'Person1?team=0&id=63',\n",
+       " 'Person1?team=0&id=64',\n",
+       " 'Person1?team=0&id=65',\n",
+       " 'Person1?team=0&id=66',\n",
+       " 'Person1?team=0&id=67',\n",
+       " 'Person1?team=0&id=68',\n",
+       " 'Person1?team=0&id=69',\n",
+       " 'Person1?team=0&id=70',\n",
+       " 'Person1?team=0&id=71',\n",
+       " 'Person1?team=0&id=72',\n",
+       " 'Person1?team=0&id=73',\n",
+       " 'Person1?team=0&id=74',\n",
+       " 'Person1?team=0&id=75',\n",
+       " 'Person1?team=0&id=76',\n",
+       " 'Person1?team=0&id=77',\n",
+       " 'Person1?team=0&id=78',\n",
+       " 'Person1?team=0&id=79',\n",
+       " 'Person1?team=0&id=80',\n",
+       " 'Person1?team=0&id=81',\n",
+       " 'Person1?team=0&id=82',\n",
+       " 'Person1?team=0&id=83',\n",
+       " 'Person1?team=0&id=84',\n",
+       " 'Person1?team=0&id=85',\n",
+       " 'Person1?team=0&id=86',\n",
+       " 'Person1?team=0&id=87',\n",
+       " 'Person1?team=0&id=88',\n",
+       " 'Person1?team=0&id=89',\n",
+       " 'Person1?team=0&id=90',\n",
+       " 'Person1?team=0&id=91',\n",
+       " 'Person1?team=0&id=92',\n",
+       " 'Person1?team=0&id=93',\n",
+       " 'Person1?team=0&id=94',\n",
+       " 'Person1?team=0&id=95',\n",
+       " 'Person1?team=0&id=96',\n",
+       " 'Person1?team=0&id=97',\n",
+       " 'Person1?team=0&id=98',\n",
+       " 'Person1?team=0&id=99',\n",
+       " 'Person1?team=0&id=100',\n",
+       " 'Person1?team=0&id=102',\n",
+       " 'Person1?team=0&id=103',\n",
+       " 'Person1?team=0&id=104',\n",
+       " 'Person1?team=0&id=105',\n",
+       " 'Person1?team=0&id=106',\n",
+       " 'Person1?team=0&id=107',\n",
+       " 'Person1?team=0&id=108',\n",
+       " 'Person1?team=0&id=109',\n",
+       " 'Person1?team=0&id=110',\n",
+       " 'Person1?team=0&id=111',\n",
+       " 'Person1?team=0&id=112',\n",
+       " 'Person1?team=0&id=113',\n",
+       " 'Person1?team=0&id=114',\n",
+       " 'Person1?team=0&id=115',\n",
+       " 'Person1?team=0&id=116',\n",
+       " 'Person1?team=0&id=117',\n",
+       " 'Person1?team=0&id=118',\n",
+       " 'Person1?team=0&id=119',\n",
+       " 'Person1?team=0&id=120',\n",
+       " 'Person1?team=0&id=121',\n",
+       " 'Person1?team=0&id=122',\n",
+       " 'Person1?team=0&id=123',\n",
+       " 'Person1?team=0&id=124',\n",
+       " 'Person1?team=0&id=125',\n",
+       " 'Person1?team=0&id=126',\n",
+       " 'Person1?team=0&id=127',\n",
+       " 'Person1?team=0&id=128',\n",
+       " 'Person1?team=0&id=129',\n",
+       " 'Person1?team=0&id=130',\n",
+       " 'Person1?team=0&id=131',\n",
+       " 'Person1?team=0&id=132',\n",
+       " 'Person1?team=0&id=133',\n",
+       " 'Person1?team=0&id=134',\n",
+       " 'Person1?team=0&id=135',\n",
+       " 'Person1?team=0&id=136',\n",
+       " 'Person1?team=0&id=137',\n",
+       " 'Person1?team=0&id=138',\n",
+       " 'Person1?team=0&id=139',\n",
+       " 'Person1?team=0&id=140']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agent_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'obs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-ce6bdf4210cf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mobs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Person1?team=0&id=0'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvector\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'obs' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "obs['Person1?team=0&id=0'].vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'obs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-3c6bdfe70d69>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mobs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'obs' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "obs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> \u001b[0;32m<__array_function__ internals>\u001b[0m(5)\u001b[0;36mconcatenate\u001b[0;34m()\u001b[0m\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ipdb>  dec_obs\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** NameError: name 'dec_obs' is not defined\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ipdb>  l\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ipdb>  c\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pdb;pdb.pm()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "obs_hist = []\n",
