More tests, and implementation fixes up to policy optimization

--- a/coltra/notebooks/collector_test.ipynb
+++ b/coltra/notebooks/collector_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,18 +10,18 @@
     "sys.path.insert(0, '..')\n",
     "\n",
     "import numpy as np\n",
+    "import torch\n",
     "\n",
     "from envs import UnitySimpleCrowdEnv\n",
     "from collectors import collect_crowd_data\n",
     "from agents import ConstantAgent\n",
-    "from utils import concat_crowd_batch\n",
     "\n",
     "from tqdm import trange, tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 500/500 [00:07<00:00, 68.70it/s]\n"
+      "100%|██████████| 500/500 [00:06<00:00, 76.18it/s]\n"
      ]
     }
    ],
@@ -57,7 +57,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo = data.reward.view((500, -1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 8.7354e-04,  1.6572e-03,  2.3574e-03,  ...,  5.3406e-05,\n",
+       "        -4.3106e-05,  9.6147e-04])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.reward"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "foo = torch.randn(500, 10)\n",
+    "bar = torch.randn(500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-35.1831, -18.4503,  14.6587,  31.3742, -20.8110,  27.8204,  19.4542,\n",
+       "        -13.1884, -26.2660, -30.3281])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bar @ foo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +127,7 @@
        "tensor([False, False, False,  ..., False, False,  True])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
